# mailing

./: .env.sample  README.md  auth.json  blog.json  mailing.json  pyproject.toml  users.json
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_count_views.py
blog/templates/blog/: blog_detail.html
config/: settings.py  urls.py
mailing/: models.py  services.py  urls.py  views.py
mailing/management/commands/: send_mail.py  sending_mail.py
mailing/migrations/: 0001_initial.py  0002_alter_newsletter_last_sending_and_more.py  0003_alter_newsletter_options_client_user_message_user_and_more.py
mailing/templates/mailing/: base.html  client_detail.html  client_list.html  confirm_delete.html  mailing_start.html  message_form.html  message_list.html  newsletter_detail.html  newsletter_list.html  newsletterlog_list.html
mailing/templates/mailing/includes/: inc_mailing_menu.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_options.py
users/templates/users/: email_confirm.html  login.html  user_confirm_delete.html  user_detail.html  user_form.html  user_list.html
