[tool.poetry]
name = "mailing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2"
python-dotenv = "^1.0.1"
django-apscheduler = "^0.6.2"
psycopg2-binary = "^2.9.9"
django-crispy-forms = "^2.3"
crispy-bootstrap4 = "^2024.1"
ipython = "<8.0"
pillow = "^10.4.0"
redis = "^5.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

